<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.4</version>
        <relativePath/>
    </parent>

    <groupId>com.ccb</groupId>
    <artifactId>ccb-platform</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>ccb-platform</name>
    <description>Single-tenant modular administration platform foundation</description>

    <properties>
        <java.version>17</java.version>
        <mybatis-plus.version>3.5.12</mybatis-plus.version>
        <jjwt.version>0.12.6</jjwt.version>
        <flowable.version>7.0.1</flowable.version>
        <!-- Docker 29 requires API 1.40+; Testcontainers 2 uses a compatible Docker client. -->
        <testcontainers.version>2.0.5</testcontainers.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency><groupId>com.ccb</groupId><artifactId>ccb-common</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.ccb</groupId><artifactId>ccb-infrastructure</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.ccb</groupId><artifactId>ccb-file-preview</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.ccb</groupId><artifactId>ccb-attachment</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.ccb</groupId><artifactId>ccb-security</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.ccb</groupId><artifactId>ccb-system</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.ccb</groupId><artifactId>ccb-workflow</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.ccb</groupId><artifactId>ccb-ai</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.ccb</groupId><artifactId>ccb-release</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.ccb</groupId><artifactId>ccb-data-migration</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.ccb</groupId><artifactId>ccb-requirement</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.ccb</groupId><artifactId>ccb-architecture</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.ccb</groupId><artifactId>ccb-test-management</artifactId><version>${project.version}</version></dependency>
        </dependencies>
    </dependencyManagement>
    <modules>
        <module>server/src/shared/common</module>
        <module>server/src/platform/infrastructure</module>
        <module>server/src/platform/file-preview</module>
        <module>server/src/platform/attachment</module>
        <module>server/src/platform/security</module>
        <module>server/src/platform/system</module>
        <module>server/src/platform/workflow</module>
        <module>server/src/modules/ai</module>
        <module>server/src/modules/release</module>
        <module>server/src/modules/data-migration</module>
        <module>server/src/modules/requirement</module>
        <module>server/src/modules/architecture</module>
        <module>server/src/modules/test-management</module>
        <module>server/src/platform/boot</module>
    </modules>
</project>
